--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "node-sass": "^5.0.0",
-    "react-scripts": "3.3.0-next.38",
+    "react-scripts": "^4.0.3",
     "sass-loader": "^11.0.1"
   },
   "scripts": {
